--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,17 +11,21 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+    "Topic :: Utilities",
+    "Topic :: Scientific/Engineering :: Visualization",
 ]
 dependencies = [
     "matplotlib >= 3.8.0",
 ]
+license = {text = "MIT License"}
 
 [build-system]
 requires = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project.urls]
-Homepage = "https://github.com/bianconif/mpl_ornaments"
+homepage = "https://github.com/bianconif/mpl_ornaments"
+documentation = "https://bianconif.github.io/mpl_ornaments"
 
 [tool.setuptools]
 packages = ["mpl_ornaments"]
