--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = '0.0.2'
 authors = [
     {name = "Francesco Bianconi", email = "bianco@ieee.org"}
 ]
+readme = "README.md"
 description = "Small extensions to Matplotlib"
 requires-python = ">=3.10.4"
 classifiers = [
